<resources>
    <string name="app_name">Janjaruka</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->

    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_country">Country</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_signup">Sign Up</string>
    <string name="action_sign_in">Log in</string>
    <string name="prompt_comment">Comment</string>
    <string name="action_submit">Submit</string>
    <string name="action_sign_up">Create New Account</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_network_timeout">Connection time out</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="penalty_label">Penalty:</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Navigation Drawer menu labels -->
    <string name="prompt_home">Home</string>
    <string name="prompt_favorites">Favorities</string>
    <string name="prompt_share">Share</string>
    <string name="prompt_about_us">About Us</string>
    <string name="prompt_settings">Settings</string>
    <string name="penalty">Penalty</string>
    <!--Nav drawe string -->
    <string name="drawer_close">Drawer Close</string>
    <string name="drawer_open">Drawer Open</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Profile</item>
        <item>Favorites</item>
        <item>About</item>
        <item>Share</item>
        <item>Settings</item>
    </string-array>


    <string-array name="country_array">
        <item>Kenya</item>
    </string-array>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
